Changes to Manifest File for Better Updates and Installation

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "games",
+    "name": "kazist/games",
     "title": "Games Listing",
     "icon": "icons\/games.png",
     "extension": "component",
-    "path": "games\/",
+    "path": "applications/Games/",
     "description": "Games Listing",
     "version": 1
 }
